<resources>
    <string name="app_name">TitchersPET</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="admin">Administrador</string>
    <string name="educadora">Educadora</string>
    <string name="register">Registo de educadora</string>
    <string name="register2">Registo de turma</string>
    <string name="register3">Registo de aluno</string>
    <string name="set_name">Insira um nome</string>
    <string name="set_email">Insira um email</string>
    <string name="set_email_ed">Insira o email do enc. educação</string>
    <string name="set_password">Insira uma password</string>
    <string name="set_date">Insira uma data de nascimento</string>
    <string name="set_sex">Insira o sexo</string>
    <string name="name">Nome:</string>
    <string name="date">Data de nascimento:</string>
    <string name="sex">Sexo:</string>
    <string name="email">Email:</string>
    <string name="password2">Password:</string>
    <string name="teachers">Educadoras</string>
    <string name="students">Alunos</string>
    <string name="classes">Turmas</string>
    <string name="number">Número:</string>
    <string name="set_number">Insira o número:</string>
    <string name="sala">Sala:</string>
    <string name="set_sala">Insira o número da sala</string>
    <string name="edit_student">Editar aluno</string>
    <string name="edit_teacher">Editar educadora</string>
    <string name="xixi">Fez xixi?</string>
    <string name="coco">Fez cocó?</string>
    <string name="cry">Chorou?</string>
    <string name="eat1">Almoçou bem?</string>
    <string name="eat2">Lanchou bem?</string>
    <string name="sleep">Dormiu bem?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="rating">Comportamento:</string>
    <string name="info">Informação diária do aluno</string>
    <string name="ent_a">Responsável por entrega:</string>
    <string name="deliv_a">Responsável por retorno:</string>
    <string name="allergies">Alergias:</string>
    <string name="medication">Medicação:</string>
    <string name="outros">Outras informações:</string>
    <string name="set_medication">Insira aqui a medicação</string>
    <string name="set_allergies">Insira aqui as alergias</string>
    <string name="set_outros">Insira aqui as outras informações</string>
</resources>
