<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:padding="20dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorText"
            android:paddingTop="10dp"
            />
        <EditText
            android:id="@+id/set_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/set_name"
            android:layout_below="@+id/name"
            android:paddingTop="5dp"
            />

        <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorText"
            android:paddingTop="10dp"
            android:layout_below="@+id/set_name"
            />
        <EditText
            android:id="@+id/set_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/set_number"
            android:layout_below="@+id/number"
            android:paddingTop="5dp"
            android:inputType="number"
            />

        <TextView
            android:id="@+id/email_ed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorText"
            android:paddingTop="10dp"
            android:layout_below="@+id/set_number"
            />
        <EditText
            android:id="@+id/set_email_ed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/set_email_ed"
            android:layout_below="@+id/email_ed"
            android:paddingTop="5dp"
            android:inputType="textEmailAddress"
            />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorText"
            android:paddingTop="10dp"
            android:layout_below="@+id/set_email_ed"
            />
        <EditText
            android:id="@+id/set_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/set_date"
            android:layout_below="@+id/date"
            android:paddingTop="5dp"
            android:inputType="date"
            />

        <TextView
            android:id="@+id/sexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorText"
            android:paddingTop="10dp"
            android:layout_below="@+id/set_date"
            />
        <EditText
            android:id="@+id/set_sexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/set_sex"
            android:layout_below="@+id/sexo"
            android:paddingTop="5dp"
            />

        <ImageButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/set_sexo"
            android:src="@drawable/save"
            android:background="@drawable/button_style"
            android:paddingLeft="45dp"
            android:paddingRight="45dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="50dp"
            android:onClick="onSave"
            />
    </RelativeLayout>
</ScrollView>