<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:padding="20dp">
        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="24"
            android:padding="5dp"
            android:id="@+id/grid">

            <TextView
                android:id="@+id/xixi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/xixi"
                android:textStyle="bold"
                android:textColor="@color/colorText"
                android:textSize="17sp"
                />
            <CheckBox
                android:id="@+id/yes1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_column="0"
                android:layout_row="2"
                android:text="@string/yes"
                />
            <CheckBox
                android:id="@+id/no1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_column="0"
                android:layout_row="3"
                android:text="@string/no"
                />

            <TextView
                android:id="@+id/eat1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="0"
                android:text="@string/eat1"
                android:textStyle="bold"
                android:textColor="@color/colorText"
                android:textSize="17sp"
                />
            <CheckBox
                android:id="@+id/yes2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_column="0"
                android:layout_row="5"
                android:text="@string/yes"
                />
            <CheckBox
                android:id="@+id/no2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_column="0"
                android:layout_row="6"
                android:text="@string/no"
                />

            <TextView
                android:id="@+id/eat2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="7"
                android:layout_column="0"
                android:text="@string/eat2"
                android:textStyle="bold"
                android:textColor="@color/colorText"
                android:textSize="17sp"
                />
            <CheckBox
                android:id="@+id/yes3"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_column="0"
                android:layout_row="8"
                android:text="@string/yes"
                />
            <CheckBox
                android:id="@+id/no3"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_column="0"
                android:layout_row="9"
                android:text="@string/no"
                />

            <TextView
                android:id="@+id/coco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:text="@string/coco"
                android:textStyle="bold"
                android:textColor="@color/colorText"
                android:textSize="17sp"
                android:layout_marginStart="15dp"
                />
            <CheckBox
                android:id="@+id/yes4"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_column="1"
                android:layout_row="2"
                android:text="@string/yes"
                android:layout_marginStart="15dp"
                />
            <CheckBox
                android:id="@+id/no4"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_column="1"
                android:layout_row="3"
                android:text="@string/no"
                android:layout_marginStart="15dp"
                />

            <TextView
                android:id="@+id/sleep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="1"
                android:text="@string/sleep"
                android:textStyle="bold"
                android:textColor="@color/colorText"
                android:textSize="17sp"
                android:layout_marginStart="15dp"
                />
            <CheckBox
                android:id="@+id/yes5"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_column="1"
                android:layout_row="5"
                android:text="@string/yes"
                android:layout_marginStart="15dp"
                />
            <CheckBox
                android:id="@+id/no5"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_column="1"
                android:layout_row="6"
                android:text="@string/no"
                android:layout_marginStart="15dp"
                />

            <TextView
                android:id="@+id/cry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="7"
                android:layout_column="1"
                android:text="@string/cry"
                android:textStyle="bold"
                android:textColor="@color/colorText"
                android:textSize="17sp"
                android:layout_marginStart="15dp"
                />
            <CheckBox
                android:id="@+id/yes6"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_column="1"
                android:layout_row="8"
                android:text="@string/yes"
                android:layout_marginStart="15dp"
                />
            <CheckBox
                android:id="@+id/no6"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_column="1"
                android:layout_row="9"
                android:text="@string/no"
                android:layout_marginStart="15dp"
                />

            <TextView
                android:id="@+id/behaviour"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/rating"
                android:textStyle="bold"
                android:textColor="@color/colorText"
                android:textSize="17sp"
                android:layout_gravity="start"
                />

            <RatingBar
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/ratingBarStyleSmall"
                android:numStars="5"
                android:stepSize="1.0"
                android:isIndicator="true"
                android:layout_column="0"
                android:layout_row="11"
                />

        </GridLayout>

        <TextView
            android:id="@+id/allergies"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/allergies"
            android:textStyle="bold"
            android:textColor="@color/colorText"
            android:textSize="17sp"
            android:layout_marginTop="5dp"
            android:layout_gravity="start"
            android:layout_below="@+id/grid"
            />
        <EditText
            android:id="@+id/set_allergies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:hint="@string/set_allergies"
            android:layout_gravity="start"
            android:layout_below="@+id/allergies"
            />

        <TextView
            android:id="@+id/medication"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/medication"
            android:textStyle="bold"
            android:textColor="@color/colorText"
            android:textSize="17sp"
            android:layout_marginTop="5dp"
            android:layout_gravity="start"
            android:layout_below="@+id/set_allergies"
            />
        <EditText
            android:id="@+id/set_medication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:hint="@string/set_medication"
            android:layout_gravity="start"
            android:layout_below="@+id/medication"
            />

        <TextView
            android:id="@+id/ent_a"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/ent_a"
            android:textStyle="bold"
            android:textColor="@color/colorText"
            android:textSize="17sp"
            android:layout_marginTop="5dp"
            android:layout_gravity="start"
            android:layout_below="@+id/set_medication"
            />
        <EditText
            android:id="@+id/set_name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:hint="@string/set_name"
            android:layout_gravity="start"
            android:layout_below="@+id/ent_a"
            />

        <TextView
            android:id="@+id/deliv_a"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/deliv_a"
            android:textStyle="bold"
            android:textColor="@color/colorText"
            android:textSize="17sp"
            android:layout_gravity="start"
            android:layout_below="@+id/set_name1"
            />
        <EditText
            android:id="@+id/set_name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:hint="@string/set_name"
            android:layout_gravity="start"
            android:layout_below="@+id/deliv_a"
            />

        <TextView
            android:id="@+id/outros"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/outros"
            android:textStyle="bold"
            android:textColor="@color/colorText"
            android:textSize="17sp"
            android:layout_gravity="start"
            android:layout_below="@+id/set_name2"
            />
        <EditText
            android:id="@+id/set_outros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:hint="@string/set_outros"
            android:layout_gravity="start"
            android:layout_below="@+id/outros"
            />

        <ImageButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/set_outros"
            android:src="@drawable/save"
            android:background="@drawable/button_style"
            android:paddingLeft="45dp"
            android:paddingRight="45dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="50dp"
            android:onClick="onSave"
            />
    </RelativeLayout>
</ScrollView>



