<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/app_name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:layout_marginTop="70dp"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/username"
        android:inputType="textPassword"
        />

    <ImageButton
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:src="@drawable/login"
        android:onClick="onLogin"
        android:background="@drawable/button_style"
        android:paddingLeft="45dp"
        android:paddingRight="45dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="15dp"
        />

</RelativeLayout>
