<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/a_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        />
    <TextView
        android:id="@+id/a_name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/a_name"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:id="@+id/a_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:layout_below="@+id/a_name"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/a_number1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/a_number"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:id="@+id/a_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@+id/a_number"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/a_email1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/a_email"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:id="@+id/a_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:layout_below="@+id/a_email"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/a_date1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/a_date"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:id="@+id/a_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        android:layout_below="@+id/a_date"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/a_sex1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/a_sex"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        android:layout_marginTop="15dp"
        />

    <ImageButton
        android:id="@+id/notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/a_sex"
        android:src="@drawable/notebook"
        android:background="@drawable/button_style"
        android:paddingLeft="45dp"
        android:paddingRight="45dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="50dp"
        android:onClick="onEdit"
        />

    <ImageButton
        android:id="@+id/edit_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/notes"
        android:src="@drawable/edit"
        android:background="@drawable/button_style"
        android:paddingLeft="45dp"
        android:paddingRight="45dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="15dp"
        android:onClick="onEdit"
        />

</RelativeLayout>