<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        android:paddingTop="10dp"
        />
    <EditText
        android:id="@+id/ei_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:paddingTop="5dp"
        />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        android:paddingTop="10dp"
        android:layout_below="@+id/set_name"
        />

    <EditText
        android:id="@+id/ei_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:paddingTop="5dp"
        android:inputType="textEmailAddress"
        />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password2"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        android:paddingTop="10dp"
        android:layout_below="@+id/set_email"
        />
    <EditText
        android:id="@+id/ei_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:paddingTop="5dp"
        android:inputType="textVisiblePassword"
        />

    <ImageButton
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/set_password"
        android:src="@drawable/save"
        android:background="@drawable/button_style"
        android:paddingLeft="45dp"
        android:paddingRight="45dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="50dp"
        android:onClick="onSaveEdit"
        />
</RelativeLayout>